test/Fail/ShouldBeAppliedToTheDatatypeParameters.err
ShouldBeAppliedToTheDatatypeParameters.agda:15.5-25: error: [UnequalTerms]
Nat != A of type Set
when checking the constructor fooI1 in the declaration of Foo
